# mhr-tree

./: CMakeLists.txt  Readme.md
cmake/: add_buildtype_ultra.cmake
data/: examples.queries
include/srtree/: DedupSerializationTraitsAdapter.h  DeduplicatingPQGramTraits.h  GeoConstraint.h  GeoRectGeometryTraits.h  MinWiseSignature.h  MinWiseSignatureTraits.h  PQGramTraits.h  QGram.h  QGramDB.h  SRTree.h  StringSetTraits.h
include/srtree/Static/: DedupDeserializationTraitsAdapter.h  DedupSerializationTraitsAdapter.h  SRTree.h  StringSetTraits.h
src/: DeduplicatingPQGramTraits.cpp  GeoConstraint.cpp  GeoRectGeometryTraits.cpp  MinWiseSignature.cpp  MinWiseSignatureTraits.cpp  OMHRTree.cpp  OMHRTree.h  OPQGramsRTree.cpp  OPQGramsRTree.h  OStringSetRTree.cpp  OStringSetRTree.h  PQGramTraits.cpp  QGram.cpp  QGramDB.cpp  SRTree.cpp  StringSetTraits.cpp  main.cpp  mainc.cpp  mainq.cpp
src/Static/: DedupDeserializationTraitsAdapter.cpp  SRTree.cpp  StringSetTraits.cpp
tests/: CMakeLists.txt  TestBase.cpp  TestBase.h  mwsig.cpp  mwsig_oscar.cpp  qgram.cpp
